# BookstoreApp-cli

./: CMakeLists.txt  README.md
db/: bookstoreDB.db  bookstoreDB.sql
include/: dbops.h  enumStructs.h  io.h  library.h  user.h  userAuth.h
src/: appBookstore.cpp  dbops.cpp  io.cpp  library.cpp  user.cpp  userAuth.cpp
